tests/snapshots/test_runner__tests__compiler__typecheck__progressive_unification_7.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let match = | x f => x.f()

let array_map<From To> = |
  xs: [From]
  f: | From -> To
-> [To] =>
  xs.match(
    | [] => []
    | [head ..._] => [head.f()]
  )

let result: [String] = [{x 2}].array_map(| o => o.x)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
   ┌─ tests/compiler/typecheck/progressive_unification_7.kk:12:24
   │
12 │ let result: [String] = [{x 2}].array_map(| o => o.x)
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type mismatch
   │
   = +---------------+-------------+
     | EXPECTED TYPE | ACTUAL TYPE |
     +---------------+-------------+
     |   [           |   [         |
     | -   String    | +   Integer |
     |   ]           |   ]         |
     +---------------+-------------+
